[metadata]
name = aiocast
version = attr: aiocast._version.__version__
author = Philippe Duval
author_email = t4rk@outlook.com
description = Cast videos to chromecast from the commandline.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cli, async, chromecast
license = MIT
url = https://github.com/T4rk1n/aiocast
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    precept==0.1.0
    aiohttp==3.5.4
    pychromecast
    appdirs==1.4.3

[options.packages.find]
exclude =
    tests


[options.entry_points]
console_scripts =
    aiocast = aiocast._cli:cli
